yaml/aliyun/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dolphin-sonar-service
  annotations:
    kubernetes.io/ingress.class: "nginx-ingress-lb"
    kubernetes.io/ingress.rule-mix: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    ingress.kubernetes.io/proxy-body-size: 100m
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: testbb1.com
      http:
        paths:
          - backend:
              service:
                name: dolphin-sonar-service
                port:
                  number: 3306
            path: /
            pathType: ImplementationSpecific
